@@ -140,7 +140,8 @@ class JApplication{
 		bool monitor_heartbeat; ///< Turn monitoring of processing threads on/off.
 		bool batch_mode;
 		bool create_event_buffer_thread; ///< Set to false before Init is called to prevent the event buffer thread from being created. (Useful if program will not be reading events e.g. jcalibread.)
-		
+		int  MAX_RELAUNCH_THREADS;
+
 	private:
 	
 		                              JApplication(){} ///< Prevent use of default constructor
